# nsai-pricing-mcp

./: Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
docs/: PRD.md
skills/: nsai-pricing.md
src/nsai_pricing_mcp/: __init__.py  eia_fetcher.py  fetcher.py  nsai_client.py  parser.py  server.py
