[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsai-pricing-mcp"
version = "0.1.0"
description = "MCP server for Netherland, Sewell & Associates (NSAI) oil & gas pricing data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.28.1",  # pinned: SSE Host-header validation / transport_security API is version-sensitive
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "pandas>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nsai-pricing-mcp = "nsai_pricing_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nsai_pricing_mcp"]
